--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,5 @@
-<div>Hello <b>Divyanshu Tyagi !</b></div>
+<div>
+  Hello <b>Divyanshu Tyagi !</b>
+  <p>Hello</p>
+  <b>this is super bad</b>
+</div>
